<resources>
    <string name="app_name">MyVideoManager</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sEdMASearch">Film suchen</string>
    <string name="sImgContentDescriptionMASearch">Film suchen</string>
    <string name="sLayLVFilme">Filmplakat</string>
    <string name="title_activity_mact_film_details">Film</string>
    <string name="sFilmPlakat">Plakat</string>
    <string name="sFilmAdd">Film hinzufügen</string>
    <string name="sFilmDelete">Film löschen</string>
    <string name="sFilmEdit">Film editieren</string>
    <string name="sTitle">Titel</string>
    <string name="sOTitle">Original Titel</string>
    <string name="sSubtitle">Untertitel</string>
    <string name="sPubYear">Jahr</string>
    <string name="sRanking">Ranking</string>
    <string name="sFSK">FSK</string>
    <string name="sEAN">EAN</string>
    <string name="sDuration">Länge</string>
    <string name="sSave">Speichern</string>
    <string name="sPlot">Plot</string>
    <string name="sComment">Kommentar schreiben</string>
    <string name="sNext">Nächste Seite</string>
    <string name="sBack">Vorherige Seite</string>
    <string name="title_activity_second_act_film_details">Filmdetails</string>
    <string name="sCountry">Land</string>
    <string name="title_activity_tact_film_details">Filmdetails</string>
    <string name="title_section1">Allgemein</string>
    <string name="title_section2">Schausp.</string>
    <string name="title_section3">Plot</string>
    <string name="title_section4">Rating</string>
    <string name="sFirstname">Vorname</string>
    <string name="sLastName">Nachname</string>
    <string name="sRole">Role</string>
    <string name="sRoleOrder">Reihenfolge</string>
    <string name="sAddActor">Schauspieler/in hinzufügen</string>
    <string name="sDeleteActor">Schauspieler/in löschen</string>
    <string name="sActorFoto">Portrait</string>
    <string name="spFunction_promt">Wählen Sie eine Funktion:</string>
    <string-array name="function_array">
        <item>Schauspieler</item>
        <item>Regisseur</item>
    </string-array>
    <string name="spGenre_prompt">Wählen Sie eine Kategorie:</string>
    <string name="sDeleteFilm">Film löschen</string>
    <string name="sGenre">Schon ausgewählte Genren:</string>
    <string name="sCommentLabel">Kommentar:</string>
    <string name="sMask">Maske</string>
    <string name="sChoice">Bitte auswählen:</string>
    <string-array name="genreD_array">
        <item>Genre bitte auswählen:</item>
        <item>Abenteuer</item>
        <item>Kinder</item>
        <item>Komödie</item>
        <item>Drama</item>
        <item>Science Fiction</item>
        <item>Thriller</item>
        <item>Western</item>
        <item>Mystery</item>
        <item>Horror</item>
        <item>EndOfWorld</item>
        <item>Action</item>
        <item>Romanze</item>
        <item>Fantasy</item>
        <item>Krieg</item>
        <item>Dokumentation</item>
        <item>Monumental</item>
        <item>Animation</item>
        <item>Katastrophe</item>
        <item>Erotik</item>
        <item>Biografie</item>
        <item>Weltraum</item>
        <item>Liebe</item>
        <item>Geschichte</item>
        <item>Sport</item>
        <item>Familie</item>
        <item>Krimi</item>
    </string-array>
    <string name="title_activity_sact_actors">Schauspieler/in</string>
    <string name="sWoman">Frau</string>
    <string name="sMan">Mann</string>
    <string name="sBirthday">Geburtstag</string>
    <string name="sVita">Vita</string>
    <string name="title_activity_mact_actors">Liste der Schauspieler/in</string>
    <string name="sShowActor">Schauspieler/innen</string>
    <string name="sCancelSearch">Suche löschen</string>
    <string name="sSearchActor">Person suchen</string>
    <string name="sDeleteSearchActor">Suche löschen</string>
    <string name="sEditUser">Role des Schauspielers/in bearbeiten</string>
    <string name="sChoiceActor">Bitte wählen Sie aus:</string>
    <string name="sGoogleWebsearch">Foto im Web suchen</string>
    <string name="sFilmografy">Filmografy</string>
    <string name="sNoFilmografy">Selection löschen</string>
    <string name="title_activity_mact_settings">Settings</string>
    <string name="sChoiceGenre">Hier können Sie einen Genre auswählen und bearbeiten bzw. einen neuen im Bearbeitungsfeld eingeben:</string>
    <string name="sChoiceFunction">Hier können Sie eine Funktion auswählen und bearbeiten bzw. eine neue im Bearbeitungsfeld eingeben:</string>
    <string name="sGenreSetting">Genren überarbeiten</string>
    <string name="sFunctionSetting">Funktion überarbeiten</string>
    <string name="sChoiceEdit">Bearbeitungsfeld</string>
    <string name="sDeleteChoice">Löschen</string>
    <string name="title_activity_tact_help">Hilfe/How-To</string>
    <string name="sFgmHelpIcon">Icons und ihre Bedeutung</string>
    <string name="title_help_section1">Icons</string>
    <string name="title_help_section2">Listen</string>
    <string name="title_help_section3">Sonstiges</string>

</resources>
