<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="de.anisma.www.myvideomanager.MActFilmDetails"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edTitel"
        android:hint="@string/sTitle" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edOTitle"
        android:hint="@string/sOTitle" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edSubtitle"
        android:hint="@string/sSubtitle" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent">

            <EditText
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/edPubYear"
                android:hint="@string/sPubYear"
                android:gravity="right" />

            <EditText
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/edFSK"
                android:hint="@string/sFSK"
                android:gravity="right" />

            <EditText
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/edDuration"
                android:gravity="right"
                android:hint="@string/sDuration" />

            <EditText
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:id="@+id/edCountry"
                android:hint="@string/sCountry" />

        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="250dp"
            android:id="@+id/imageView"
            android:contentDescription="@string/sFilmPlakat" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/ibSave1"
            android:src="@mipmap/ic_save"
            android:scaleType="fitCenter"
            android:contentDescription="@string/sSave" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/ibNext"
            android:src="@mipmap/ic_next"
            android:scaleType="fitCenter"
            android:contentDescription="@string/sBack" />
    </LinearLayout>

</LinearLayout>

