<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="de.anisma.www.myvideomanager.MActFilmDetails"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edTitel"
        android:hint="@string/sTitle" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edSubtitle"
        android:hint="@string/sSubtitle"
        android:layout_below="@+id/edTitel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edOTitle"
        android:hint="@string/sOTitle"
        android:layout_below="@+id/edSubtitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edCountry"
        android:hint="@string/sCountry"
        android:layout_below="@+id/edOTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_alignTop="@+id/ivCover"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/edPubYear"
            android:hint="@string/sPubYear"
            android:gravity="right" />

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/edFSK"
            android:hint="@string/sFSK"
            android:gravity="right" />

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/edDuration"
            android:gravity="right"
            android:hint="@string/sDuration" />

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/edEAN"
            android:hint="@string/sEAN"
            android:gravity="right" />

    </LinearLayout>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="226dp"
        android:id="@+id/ivCover"
        android:contentDescription="@string/sFilmPlakat"
        android:src="@drawable/cover"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/edCountry"
        android:layout_toEndOf="@+id/linearLayout"
        android:layout_toRightOf="@+id/linearLayout"
        android:layout_alignParentBottom="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ivCover"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true">

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/ibSave"
            android:src="@mipmap/ic_save"
            android:scaleType="fitCenter"
            android:contentDescription="@string/sSave"
            android:layout_marginBottom="0dp" />

    </LinearLayout>

</RelativeLayout>

