<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="de.anisma.www.myvideomanager.SActActors"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:id="@+id/linearLayout6">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/ivActorFoto"
            android:src="@mipmap/ic_actor"
            android:contentDescription="@string/sActorFoto" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edLastName"
                android:hint="@string/sLastName"
                android:layout_marginBottom="10dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edFirstName"
                android:hint="@string/sFirstname" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout7">

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/ibGoogleWebsearch"
            android:src="@mipmap/ic_google_websearch"
            android:scaleType="fitCenter"
            android:contentDescription="@string/sGoogleWebsearch" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:rowCount="2"
            android:columnCount="20"
            android:orientation="horizontal"
            android:paddingTop="15dp"
            android:layout_marginLeft="55dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/sWoman"
                android:id="@+id/tvWoman"
                android:layout_row="1"
                android:layout_column="2" />

            <Switch
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/swSex"
                android:layout_gravity="center_horizontal"
                android:layout_row="1"
                android:layout_column="18"
                android:textOn=""
                android:textOff=""
                android:checked="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/sMan"
                android:id="@+id/tvMan"
                android:layout_row="1"
                android:layout_column="19" />
        </GridLayout>
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/edBirthday"
        android:hint="@string/sBirthday"
        android:layout_below="@+id/linearLayout7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edVita"
        android:hint="@string/sVita"
        android:gravity="top"
        android:layout_above="@+id/linearLayout5"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/edBirthday" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/linearLayout5"
        android:gravity="bottom">

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/ibSave"
            android:src="@mipmap/ic_save"
            android:scaleType="fitCenter"
            android:contentDescription="@string/sSave" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/ibDelActor"
            android:src="@mipmap/ic_delete_actor"
            android:scaleType="fitCenter"
            android:contentDescription="@string/sDeleteActor" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="right">

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/ibFilmografy"
                android:src="@mipmap/ic_filmografy"
                android:scaleType="centerCrop"
                android:contentDescription="@string/sFilmografy" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
