<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edPlot"
        android:layout_weight="0.89"
        android:editable="true"
        android:hint="@string/sPlot"
        android:gravity="top" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edComment"
        android:layout_weight="0.11"
        android:hint="@string/sComment"
        android:gravity="top"
        android:editable="true" />

    <RatingBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rbRanking"
        android:numStars="7" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/ibSave2"
            android:src="@mipmap/ic_save"
            android:scaleType="fitCenter"
            android:contentDescription="@string/sSave" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/ibBack"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/ibSave2"
            android:layout_toEndOf="@+id/ibSave2"
            android:src="@mipmap/ic_back"
            android:scaleType="fitCenter"
            android:contentDescription="@string/sBack" />
    </RelativeLayout>

</LinearLayout>