<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:id="@+id/llMAHorSearch"
        android:gravity="right">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edMASearch"
            android:hint="@string/sEdMASearch"
            android:gravity="start"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgMASearch"
            android:src="@android:drawable/ic_search_category_default"
            android:layout_gravity="right"
            android:contentDescription="@string/sImgContentDescriptionMASearch" />

    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="330dp"
        android:id="@+id/lvMA"
        android:choiceMode="singleChoice" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/ibFilmAdd"
                android:src="@mipmap/ic_filmadd"
                android:scaleType="fitCenter"
                android:contentDescription="@string/sFilmAdd" />

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/ibShowActor"
                android:src="@mipmap/ic_actor"
                android:scaleType="fitCenter"
                android:contentDescription="@string/sShowActor" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_vertical|right">

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:id="@+id/ibCancelSearch"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/ic_cancel_search"
                    android:visibility="invisible"
                    android:contentDescription="@string/sCancelSearch" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
